--- a/AlbumBrowserDemo/Podfile
+++ b/AlbumBrowserDemo/Podfile
@@ -1,5 +1,5 @@
-platform :ios,’7.0’
-target 'AlbumBrowserDemo’ do
+platform :ios,'8.0'
+target 'AlbumBrowserDemo' do
 
 pod 'SDWebImage'
 pod 'MBProgressHUD'
